✨(backend) add read only admin api endpoint to list/retrieve orders
We would like to display orders within the backoffice. In order to do that we
need an endpoint to list and retrieve orders.
